Fix spacing on contact page

--- a/src/pages/css/Contact.css
+++ b/src/pages/css/Contact.css
@@ -105,6 +105,7 @@
 }
 
 .exec-members {
+  margin-top: 3rem;
   display: flex;
   width: 95vw;
   justify-content: space-evenly;
